# motion-detection

./: CMakeLists.txt  README.md  clean.sh  motion-seeker  motion_detection.cpp  motion_seeker.cpp
motion_src/src/: motion_detection.cpp
